<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingRight="30dp"
            android:text=""
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingRight="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="45sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@null"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="C"
                android:textColor="@color/red"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/brackets"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="()"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/power"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="^"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="/"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="7"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="8"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="9"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="X"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="4"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="6"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="-"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="3"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="+"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="."
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:backgroundTint="@color/black"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                style="?android:attr/buttonBarButtonStyle" />


            <Button
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:backgroundTint="@color/orange"
                android:text="="
                android:textColor="@color/white"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>