<resources>
    <string name="app_name">Subscrazy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Subscrazy</string>
    <string name="second_fragment_label">Add Subscription</string>
    <string name="third_fragment_label">Edit Subscription</string>
    <string name="calculator">Calculator</string>

    <string name="price">Price</string>
    <string name="cycle">Cycle</string>
    <string name="bill_date">Bill date</string>
    <string name="sub_name">Subscription Name</string>
    <string name="_0_00">0.00</string>
    <string name="save">Save</string>
    <string name="select_date">Select Date</string>

    <string-array name="timeselectarray">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>



    <string-array name="sortMenu">
        <item>Name</item>
        <item>Price</item>
        <item>Date</item>
    </string-array>
    <string name="delete">Delete</string>
    <!-- Preference Titles -->
    <string name="notification_header">Notifications</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="notification_title">Receive Notifications</string>
    <string name="notification">Notification</string>
    <string name="todo">TODO</string>
    <string name="_0_0">0.0</string>
    <string name="total_expense">Total Expense:</string>
    <string name="add">Add</string>
    <string name="subscription_name">Subscription Name</string>
    <string name="recurrence">Recurrence</string>
    <string name="billing_time">Billing Time</string>
    <string name="notes">Notes</string>


</resources>